--- a/css/default.css
+++ b/css/default.css
@@ -88,6 +88,16 @@ button{
     }
 }
 
+@media  only screen and (min-width: 430px) {
+    .g1{
+        height: 430px;
+    }
+    .g2{
+        height: 4410px;
+        background-position:0 -450px;
+    }
+}
+
 @media  only screen and (min-width: 505px) {
     .g1{
         height: 505px;
