完成基本界面

--- a/css/default.css
+++ b/css/default.css
@@ -102,7 +102,15 @@ button{
         background-position:0 -450px;
     }
 }
-
+@media  only screen and (min-width: 430px) {
+    .g1{
+        height: 435px;
+    }
+    .g2{
+        height: 4400px;
+        background-position:0 -450px;
+    }
+}
 @media  only screen and (min-width: 505px) {
     .g1{
         height: 505px;
